fix layout issue on iOS

--- a/_sass/index.scss
+++ b/_sass/index.scss
@@ -66,6 +66,7 @@
   #review {
     .image img {
       height: 70px;
+      width: 70px;
       border-radius: 100%;
     }
 
